--- a/app/src/main/res/layout/recyclerview_bottle.xml
+++ b/app/src/main/res/layout/recyclerview_bottle.xml
@@ -22,7 +22,7 @@
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:background="@color/colorAccent"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_alignBottom="@+id/delete"
             android:layout_alignParentTop="true" />
 
@@ -33,65 +33,26 @@
             android:text="Content"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:layout_below="@+id/pirate_mast_title"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"/>
-
-
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/delete"
             android:src="@android:drawable/ic_menu_delete"
             android:contentDescription="delete"
-            android:onClick="deleteItem"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="24sp"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/linearLayout">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:id="@+id/yar_har_rating"
-                android:text="Yar Har! +0"
-                android:singleLine="true"
-                android:textColor="@color/colorAccent"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:singleLine="true"
-                android:id="@+id/aye_rating"
-                android:textColor="@color/colorAccent"
-                android:text="Aye +0" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:singleLine="true"
-                android:id="@+id/nay_rating"
-                android:textColor="@color/colorAccent"
-                android:text="Nay +0 " />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:singleLine="true"
-                android:id="@+id/scurvy_rating"
-                android:textColor="@color/colorAccent"
-                android:text="Scurvy! +0" />
-        </LinearLayout>
+       <com.yarmatey.messageinabottle.adapters.Ratings
+           android:id="@+id/ratings"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_alignParentBottom="true"
+           />
 
 
     </RelativeLayout>
